refactor: loginDocumentation 추가 반영